welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:15: error: not found: value ligne6
      ligne6=1
      ^